# demo-launcher

./: .gitignore  README.md  flake.nix  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
.github/workflows/: cache-packages.yaml  release-tauri-app.yaml  site.yaml
assets/: index-0781605c.js  index-38db135a.js  index-9e1530f9.js
site/: index.html  package.json  vite.config.ts
site/src/: download-installer-button.ts
src/: automatic-update-dialog.ts  commands.ts  context.ts  index.ts  running-apps.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: desktop.json  main.json  mobile.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs
