[package]
name = "demo-launcher"
version = "0.2.7"
description = "Demo Launcher"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.70"

[lib]
name = "tauri_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.3", default-features = false , features = [] }

[dependencies]
tauri = { version = "2.1.1", features = [ "devtools" ] }
tauri-plugin-holochain = { git = "https://github.com/darksoil-studio/tauri-plugin-holochain", branch = "main-0.5" }
holochain_types = { version = "0.5" }
holochain_client = { version = "0.7" }

serde = "1"
serde_json = "1"
log = "0.4"
tauri-plugin-log = "2"
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
url2 = "0.0.6"
app_dirs2 = "2.5.5"
tempdir = "0.3.7"
anyhow = "1"
thiserror = "2"
tauri-plugin-process = "2"
tauri-plugin-barcode-scanner = "2"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"

[target.'cfg(any(target_os = "android", target_os = "ios"))'.dependencies]
tauri-plugin-barcode-scanner = "2"

[patch.crates-io]
holochain = { git = "https://github.com/guillemcordoba/holochain", branch = "develop-0.5" }
holochain_types = { git = "https://github.com/guillemcordoba/holochain", branch = "develop-0.5" }
holochain_zome_types = { git = "https://github.com/guillemcordoba/holochain", branch = "develop-0.5" }
holochain_integrity_types = { git = "https://github.com/guillemcordoba/holochain", branch = "develop-0.5" }
holochain_p2p = { git = "https://github.com/guillemcordoba/holochain", branch = "develop-0.5" }
holochain_timestamp = { git = "https://github.com/guillemcordoba/holochain", branch = "develop-0.5" }
holochain_nonce = { git = "https://github.com/guillemcordoba/holochain", branch = "develop-0.5" }
holochain_keystore = { git = "https://github.com/guillemcordoba/holochain", branch = "develop-0.5" }
mr_bundle = { git = "https://github.com/guillemcordoba/holochain", branch = "develop-0.5" }
holochain_conductor_api = { git = "https://github.com/guillemcordoba/holochain", branch = "develop-0.5" }
holo_hash = { git = "https://github.com/guillemcordoba/holochain", branch = "develop-0.5" }

kitsune2 = { git = "https://github.com/guillemcordoba/kitsune2", branch = "iroh-transport" }
kitsune2_api = { git = "https://github.com/guillemcordoba/kitsune2", branch = "iroh-transport" }
kitsune2_core = { git = "https://github.com/guillemcordoba/kitsune2", branch = "iroh-transport" }
kitsune2_dht = { git = "https://github.com/guillemcordoba/kitsune2", branch = "iroh-transport" }
kitsune2_gossip = { git = "https://github.com/guillemcordoba/kitsune2", branch = "iroh-transport" }
kitsune2_bootstrap_client = { git = "https://github.com/guillemcordoba/kitsune2", branch = "iroh-transport" }
